--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
@@ -9,11 +10,30 @@
 
 <body>
 
-    <nav class="navbar">
-        <div class="hamburger">
-            <div class="hamburger__line hamburger__line--1"></div>
-            <div class="hamburger__line hamburger__line--2"></div>
-            <div class="hamburger__line hamburger__line--3"></div>
+    <div class="back-all-card back-all-card-js">
+
+    </div>
+
+    <nav class="navbar navbar-js">
+        <div class="hamburger hamburger-js" is_nav_open="no">
+            <div class="hamburger__line hamburger__line--1 hamburger__line--1-js"></div>
+            <div class="hamburger__line hamburger__line--2 hamburger__line--2-js"></div>
+            <div class="hamburger__line hamburger__line--3 hamburger__line--3-js"></div>
+        </div>
+        <div class="menu menu-js">
+            <div class="menu__line"></div>
+            <div class="menu__item">
+                <a href="#">Strona Główna</a>
+            </div>
+            <div class="menu__line"></div>
+            <div class="menu__item">
+                <a href="#">Kontakt</a>
+            </div>
+            <div class="menu__line"></div>
+            <div class="menu__item">
+                <a href="#">Mój GitHub</a>
+            </div>
+            <div class="menu__line"></div>
         </div>
     </nav>
 
@@ -34,7 +54,6 @@
                 </a>
 
             </div>
-
             <div class="card__side card__side-back back-side-js">
                 <svg class="card__back-icon back-js">
                     <use xlink:href="img/sprite.svg#icon-back"></use>
