--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     </div>
 
     <nav class="navbar navbar-js">
-        <div class="hamburger hamburger-js" is_nav_open="no">
-            <div class="hamburger__line hamburger__line--1 hamburger__line--1-js"></div>
-            <div class="hamburger__line hamburger__line--2 hamburger__line--2-js"></div>
-            <div class="hamburger__line hamburger__line--3 hamburger__line--3-js"></div>
-        </div>
+        <input type="checkbox" class="hamburger__checkbox" id="toggle-nav">
+        <label for="toggle-nav">
+            <div class="hamburger hamburger-js">
+                <div class="hamburger__line hamburger__line--1 hamburger__line--1-js"></div>
+                <div class="hamburger__line hamburger__line--2 hamburger__line--2-js"></div>
+                <div class="hamburger__line hamburger__line--3 hamburger__line--3-js"></div>
+            </div>
+        </label>
         <div class="menu menu-js">
             <div class="menu__line"></div>
             <div class="menu__item">
