--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
                 <a href="#" class="card__link">
-                    <svg class="card__icon">
+                    <svg class="card__icon card__icon--1">
                         <use xlink:href="img/sprite.svg#icon-pacman"></use>
                     </svg>
 
@@ -73,9 +73,11 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <svg class="card__icon">
-                    <use xlink:href="img/sprite.svg#icon-phone"></use>
-                </svg>
+                <a href="#" class="card__link">
+                    <svg class="card__icon card__icon--2">
+                        <use xlink:href="img/sprite.svg#icon-phone"></use>
+                    </svg>
+                </a>
 
                 <p class="card__title">smartphone</p>
             </div>
@@ -95,9 +97,15 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <svg class="card__icon">
-                    <use xlink:href="img/sprite.svg#icon-blog"></use>
-                </svg>
+                <a href="#" class="card__link">
+
+                    <svg class="card__icon card__icon--3">
+                        <use xlink:href="img/sprite.svg#icon-blog"></use>
+                    </svg>
+                    <div class="card__icon--3-strip-1"></div>
+                    <div class="card__icon--3-strip-2"></div>
+                    <div class="card__icon--3-strip-3"></div>
+                </a>
 
                 <p class="card__title">blog</p>
             </div>
@@ -117,9 +125,11 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <svg class="card__icon">
-                    <use xlink:href="img/sprite.svg#icon-ball"></use>
-                </svg>
+                <a href="#" class="card__link">
+                    <svg class="card__icon card__icon--4">
+                        <use xlink:href="img/sprite.svg#icon-ball"></use>
+                    </svg>
+                </a>
 
                 <p class="card__title">paper soccer</p>
             </div>
@@ -139,9 +149,11 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <svg class="card__icon">
-                    <use xlink:href="img/sprite.svg#icon-printer"></use>
-                </svg>
+                <a href="#" class="card__link">
+                    <svg class="card__icon  card__icon--5">
+                        <use xlink:href="img/sprite.svg#icon-printer"></use>
+                    </svg>
+                </a>
 
                 <p class="card__title">printer rating</p>
             </div>
