--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
                 <svg class="card__info info-js">
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
-                <a href="#" class="card__link">
-                    <svg class="card__icon card__icon--1">
+                <a href="#" class="card__link card__link--pacman">
+                    <div class="card__icon card__icon-js card__icon--1"></div>
+                    <!-- <svg class="card__icon card__icon--1">
                         <use xlink:href="img/sprite.svg#icon-pacman"></use>
-                    </svg>
+                    </svg> -->
 
-                    <p class="card__title">pacman</p>
+                    <p class="card__title card__title-js">pacman</p>
                 </a>
 
             </div>
