pcman eating + ball fly

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -50,10 +51,6 @@
                 </svg>
                 <a href="#" class="card__link card__link--pacman">
                     <div class="card__icon card__icon-js card__icon--1"></div>
-                    <!-- <svg class="card__icon card__icon--1">
-                        <use xlink:href="img/sprite.svg#icon-pacman"></use>
-                    </svg> -->
-
                     <p class="card__title card__title-js">pacman</p>
                 </a>
 
@@ -120,14 +117,14 @@
             </div>
         </div>
 
-        <div class="card card--4">
+        <div class="card card--4 ">
             <div class="card__side card__side-front front-side-js">
                 <svg class="card__info info-js">
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <a href="#" class="card__link">
-                    <svg class="card__icon card__icon--4">
+                <a href="#" class="card__link card__link--ball card__link--ball-js">
+                    <svg class="card__icon card__icon--4" type_animation="odd">
                         <use xlink:href="img/sprite.svg#icon-ball"></use>
                     </svg>
                 </a>
