--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="menu menu-js">
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="#">Strona Główna</a>
+                <a href="./index.html">Strona Główna</a>
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="#">Kontakt</a>
+                <a href="./kontakt.html">Kontakt</a>
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
@@ -147,7 +147,15 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <a href="#" class="card__link">
+                <a href="#" class="card__link card__link--printer">
+                    <div class="card__printing-paper">
+                        <div class="line-1">HAVE</div>
+                        <div class="line-2">a</div>
+                        <div class="line-3">nice</div>
+                        <div class="line-4">day</div>
+                    </div>
+                    <div class="card__printer-cover"></div>
+                    <div class="card__printer-led"></div>
                     <svg class="card__icon  card__icon--5">
                         <use xlink:href="img/sprite.svg#icon-printer"></use>
                     </svg>
@@ -216,7 +224,7 @@
             <p class="container__title">printer rating</p>
         </div>
     </div> -->
-        <script src="./JS/animation.js"></script>
+        <script src="./JS/main-page.js"></script>
 </body>
 
 </html>
