--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="#">Mój GitHub</a>
+                <a href="https://github.com/MR-SKYFALL?tab=repositories" target="_blank" >Mój GitHub</a>
             </div>
             <div class="menu__line"></div>
         </div>
