--- a/kontakt.html
+++ b/kontakt.html
@@ -35,14 +35,18 @@
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="#">Mój GitHub</a>
+                <a href="https://github.com/MR-SKYFALL?tab=repositories">Mój GitHub</a>
             </div>
             <div class="menu__line"></div>
         </div>
     </nav>
 
     
-
+    <div class="container">
+        <div class="contact-element">
+            
+        </div>
+    </div>
 
         <script src="./JS/contact-page.js"></script>
 </body>
