color primary green - refactoring

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
                 <div class="hamburger__line hamburger__line--3 hamburger__line--3-js"></div>
             </div>
         </label>
-        <div class="menu menu-js">
+        <div class="menu menu-js ">
             <div class="menu__line"></div>
             <div class="menu__item">
                 <a href="./index.html">Strona Główna</a>
@@ -66,8 +66,9 @@
                             <use xlink:href="img/sprite.svg#icon-user-tie"></use>
                         </svg>
                     </label>
-                    <input id="name-surname" class="form__input-name-surname" placeholder="Twoje Imię i Nazwisko" type="text">
-                    
+                    <input id="name-surname" class="form__input-name-surname" placeholder="Twoje Imię i Nazwisko"
+                        type="text">
+
                 </div>
                 <div class="form__your-email">
                     <label for="input-email">
@@ -83,7 +84,8 @@
                             <use xlink:href="img/sprite.svg#icon-message"></use>
                         </svg>
                     </label>
-                    <textarea id="textarea-message" placeholder="Twoja Wiadomość"  class="form__textarea-message" name="" ></textarea>
+                    <textarea id="textarea-message" placeholder="Twoja Wiadomość" class="form__textarea-message"
+                        name=""></textarea>
                 </div>
                 <div class="form__btn-send">Wyślij</div>
             </form>
