--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <svg class="card__info info-js">
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
-                <a href="#" class="card__link card__link--pacman">
+                <a href="./pacman" class="card__link card__link--pacman">
                     <div class="card__icon card__icon-js card__icon--1"></div>
                     <p class="card__title card__title-js">pacman</p>
                 </a>
@@ -75,7 +75,7 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <a href="#" class="card__link">
+                <a href="./smartphone" class="card__link">
                     <svg class="card__icon card__icon--2">
                         <use xlink:href="img/sprite.svg#icon-phone"></use>
                     </svg>
@@ -102,7 +102,7 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <a href="#" class="card__link">
+                <a href="./blog" class="card__link">
 
                     <svg class="card__icon card__icon--3">
                         <use xlink:href="img/sprite.svg#icon-blog"></use>
@@ -131,7 +131,7 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <a href="#" class="card__link card__link--ball card__link--ball-js">
+                <a href="./paper_soccer" class="card__link card__link--ball card__link--ball-js">
                     <svg class="card__icon card__icon--4" type_animation="odd">
                         <use xlink:href="img/sprite.svg#icon-ball"></use>
                     </svg>
@@ -159,7 +159,7 @@
                     <use xlink:href="img/sprite.svg#icon-info"></use>
                 </svg>
 
-                <a href="#" class="card__link card__link--printer">
+                <a href="./oceniarka_drukarek" class="card__link card__link--printer">
                     <div class="card__printing-paper">
                         <div class="line-1">HAVE</div>
                         <div class="line-2">a</div>
