--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dawid Matras</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
@@ -189,55 +189,7 @@
 
 
 
-        <!-- ----------------------------------------------------- -->
-        <!-- <div class="container__element container__element--2">
-            <svg class="container__info">
-                <use xlink:href="img/sprite.svg#icon-info"></use>
-            </svg>
-            <div class="container__icon">
-                <svg class="container__icon">
-                    <use xlink:href="img/sprite.svg#icon-phone"></use>
-                </svg>
-            </div>
-            <p class="container__title">smartphone</p>
-        </div>
-
-        <div class="container__element container__element--3">
-            <svg class="container__info">
-                <use xlink:href="img/sprite.svg#icon-info"></use>
-            </svg>
-            <div class="container__icon">
-                <svg class="container__icon">
-                    <use xlink:href="img/sprite.svg#icon-blog"></use>
-                </svg>
-            </div>
-            <p class="container__title">blog</p>
-        </div>
-
-        <div class="container__element container__element--4">
-            <svg class="container__info">
-                <use xlink:href="img/sprite.svg#icon-info"></use>
-            </svg>
-            <div class="container__icon">
-                <svg class="container__icon">
-                    <use xlink:href="img/sprite.svg#icon-ball"></use>
-                </svg>
-            </div>
-            <p class="container__title">paper soccer</p>
-        </div>
-
-        <div class="container__element container__element--5">
-            <svg class="container__info">
-                <use xlink:href="img/sprite.svg#icon-info"></use>
-            </svg>
-            <div class="container__icon">
-                <svg class="container__icon">
-                    <use xlink:href="img/sprite.svg#icon-printer"></use>
-                </svg>
-            </div>
-            <p class="container__title">printer rating</p>
-        </div>
-    </div> -->
+     
         <script src="./JS/main-page.js"></script>
 </body>
 
