--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <nav class="navbar navbar-js">
-        <input type="checkbox" class="hamburger__checkbox" id="toggle-nav">
+        <input type="checkbox" class="hamburger__checkbox" id="toggle-nav"> 
         <label for="toggle-nav">
             <div class="hamburger hamburger-js">
                 <div class="hamburger__line hamburger__line--1 hamburger__line--1-js"></div>
@@ -31,7 +31,7 @@
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="./kontakt.html">Kontakt</a>
+                <a href="./kontakt.php">Kontakt</a>
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
