some correction in contact.php

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="menu menu-js">
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="./index.html">Strona Główna</a>
+                <a href="./index.html">Wykonane Projekty</a>
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
@@ -35,7 +35,7 @@
             </div>
             <div class="menu__line"></div>
             <div class="menu__item">
-                <a href="https://github.com/MR-SKYFALL?tab=repositories" target="_blank">Mój GitHub</a>
+                <a href="https://github.com/MR-SKYFALL?tab=repositories" target="_blank" >Mój GitHub</a>
             </div>
             <div class="menu__line"></div>
         </div>
@@ -145,7 +145,7 @@
                 </svg>
                 <p class="card__about">
                     
-                    Gra została zrobiona pod koniec trzeciej klasy technikum na ocene 6 z przedmiotu: Programowanie
+                    Gra została zrobiona pod koniec trzeciej klasy technikum na ocenę 6 z przedmiotu: Programowanie
                     Aplikacji
                     Internetowych.
                 
