--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html lang="pl">
 
 <head>
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dawid Matras</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?v=12392823">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
@@ -40,9 +41,9 @@
             <div class="menu__line"></div>
         </div>
     </nav>
-    <!-- <div class="title">Wykonane Projekty</div> -->
-    <div class="container">
 
+    <div class="container">
+        <div class="title">Wykonane Projekty</div>
         <div class="card card--1">
 
             <div class="card__side card__side-front front-side-js">
@@ -79,9 +80,10 @@
                     <svg class="card__icon card__icon--2">
                         <use xlink:href="img/sprite.svg#icon-phone"></use>
                     </svg>
+                    <p class="card__title">smartphone</p>
                 </a>
 
-                <p class="card__title">smartphone</p>
+
             </div>
             <div class="card__side card__side-back back-side-js">
                 <svg class="card__back-icon back-js">
@@ -110,9 +112,10 @@
                     <div class="card__icon--3-strip-1"></div>
                     <div class="card__icon--3-strip-2"></div>
                     <div class="card__icon--3-strip-3"></div>
+                    <p class="card__title">blog</p>
                 </a>
 
-                <p class="card__title">blog</p>
+
             </div>
             <div class="card__side card__side-back back-side-js">
                 <svg class="card__back-icon back-js">
@@ -136,9 +139,10 @@
                     <svg class="card__icon card__icon--4" type_animation="odd">
                         <use xlink:href="img/sprite.svg#icon-ball"></use>
                     </svg>
+                    <p class="card__title">paper soccer</p>
                 </a>
 
-                <p class="card__title">paper soccer</p>
+
             </div>
             <div class="card__side card__side-back back-side-js">
                 <svg class="card__back-icon back-js">
@@ -161,20 +165,23 @@
                 </svg>
 
                 <a href="./oceniarka_drukarek" class="card__link card__link--printer">
-                    <div class="card__printing-paper">
-                        <div class="line-1">HAVE</div>
-                        <div class="line-2">a</div>
-                        <div class="line-3">nice</div>
-                        <div class="line-4">day</div>
+                    <div class="card__icon-5-animation">
+                        <div class="card__printing-paper">
+                            <div class="line-1">HAVE</div>
+                            <div class="line-2">a</div>
+                            <div class="line-3">nice</div>
+                            <div class="line-4">day</div>
+                        </div>
+                        <div class="card__printer-cover"></div>
+                        <div class="card__printer-led"></div>
+                        <svg class="card__icon  card__icon--5">
+                            <use xlink:href="img/sprite.svg#icon-printer"></use>
+                        </svg>
                     </div>
-                    <div class="card__printer-cover"></div>
-                    <div class="card__printer-led"></div>
-                    <svg class="card__icon  card__icon--5">
-                        <use xlink:href="img/sprite.svg#icon-printer"></use>
-                    </svg>
+                    <p class="card__title">printer rating</p>
                 </a>
 
-                <p class="card__title">printer rating</p>
+
             </div>
             <div class="card__side card__side-back back-side-js">
                 <svg class="card__back-icon back-js">
@@ -188,7 +195,8 @@
             </div>
         </div>
 
-        <div class="card card--3">
+        <div class="card card--6">
+
             <div class="card__side card__side-front front-side-js">
                 <svg class="card__info info-js">
                     <use xlink:href="img/sprite.svg#icon-info"></use>
@@ -199,11 +207,12 @@
                     <svg class="card__icon card__icon--6">
                         <use xlink:href="img/sprite.svg#icon-gears"></use>
                     </svg>
-
+                    <p class="card__title ">Web Dev <br> Challenge #1</p>
                 </a>
 
-                <p class="card__title ">Web Dev <br> Challenge #1</p>
+
             </div>
+
             <div class="card__side card__side-back back-side-js">
                 <svg class="card__back-icon back-js">
                     <use xlink:href="img/sprite.svg#icon-back"></use>
@@ -219,7 +228,7 @@
 
 
 
-    <script src="./JS/main-page.js"></script>
+    <script src="./JS/main-page.js?v=12392823"></script>
 </body>
 
 </html>
