--- a/index.html
+++ b/index.html
@@ -105,13 +105,14 @@
                 </svg>
 
                 <a href="./blog" class="card__link">
-
-                    <svg class="card__icon card__icon--3">
-                        <use xlink:href="img/sprite.svg#icon-blog"></use>
-                    </svg>
-                    <div class="card__icon--3-strip-1"></div>
-                    <div class="card__icon--3-strip-2"></div>
-                    <div class="card__icon--3-strip-3"></div>
+                    <div class="card__icon-3-animation">
+                        <svg class="card__icon card__icon--3">
+                            <use xlink:href="img/sprite.svg#icon-blog"></use>
+                        </svg>
+                        <div class="card__icon--3-strip-1"></div>
+                        <div class="card__icon--3-strip-2"></div>
+                        <div class="card__icon--3-strip-3"></div>
+                    </div>
                     <p class="card__title">blog</p>
                 </a>
 
